update benchmarks metrics.